--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <img src="Vectors/mental health/meditation.png" alt="">
             <div class="meditationText">
                 <h1 >Meditation 
-                    <a href="#" method="post" class="explore"><button class="btn">Explore Me</button></a>
+                    <a href="Meditation/landing page/meditation.html" method="post" class="explore"><button class="btn">Explore Me</button></a>
                 </h1>
                 <div class="quote">
                     <img src="images/quots-removebg-preview.png" alt="">
