--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -43,7 +43,7 @@
     <div class="cards">
         <div class="card" id="card-1">
             <h2 class="cardH">Vipassana Meditation</h2>
-            <img src="/images/Vipassana1.png" class="c1">
+            <img src="Meditation/images/Vipassana1.png" class="c1">
             <p class="Text c1">The technique of vipassana is simple, practical way to achieve real peace of mind and to lead a happy,useful life.vipassana means “to see things as they really are”.it is a logical process of mental purification through self-observation.</p>
             <div class="flip1">
                 <h2>Benifits:</h2>
@@ -61,7 +61,7 @@
         </div>
         <div class="card" id="card-2">
             <h2 class="cardH">Mantra Meditation</h2>
-            <img src="/images/mantra1.jpg" alt="" srcset="" class="c2">
+            <img src="Meditation/images/mantra1.jpg" alt="" srcset="" class="c2">
             <p class="Text c2">Mantra is a Sanskrit term, with “man” meaning “mind” and “tra” meaning “release.” Think of a mantra — a word or phrase you repeat during meditation — as a tool to help release your mind. It can make a lot of difference, especially if you have trouble concentrating or getting in the right frame of mind.</p>
             <div class="flip2">
                 <h2>Benifits:</h2>
@@ -80,7 +80,7 @@
         </div>
         <div class="card" id="card-3">
             <h2 class="cardH">Pranayam</h2>
-            <img src="/images/Pranayam1.png" class="c3">
+            <img src="Meditation/images/Pranayam1.png" class="c3">
             <p class="Text c3">Pranayama is the practice of breath regulation. It’s a main component of yoga, an exercise for physical and mental wellness. In Sanskrit, “prana” means life energy and “yama” means control. The goal of pranayama is to connect your body and mind.</p>
             <div class="flip3">
                 <h2>Benifits:</h2>
@@ -99,7 +99,7 @@
         </div>
         <div class="card" id="card-4">
             <h2 class="cardH">Breathing Exercise</h2>
-            <img src="/images/Breathing.jpg" class="c4">
+            <img src="Meditation/images/Breathing.jpg" class="c4">
             <p class="Text c4"></p>
             <div class="flip4">
                 <h2>Benifits:</h2>
