--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -111,7 +111,7 @@
                     <li>Helps treat addiction</li>
                 </ul>
             </div>
-            <button class="btn" id="btn4"><a href="breathing exercise/breath.html"> Explore more </a></button>
+            <button class="btn" id="btn4"><a href="https://github.com/Drishty06/Healer/blob/main/breathing%20exercise/breath.html"> Explore more </a></button>
             <div class="block" id="b4"></div>
         </div>
     </div>
