--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -43,7 +43,7 @@
     <div class="cards">
         <div class="card" id="card-1">
             <h2 class="cardH">Vipassana Meditation</h2>
-            <img src="Meditation/images/Vipassana1.png" class="c1">
+            <img src="Healer/Meditation/images/Vipassana1.png" class="c1">
             <p class="Text c1">The technique of vipassana is simple, practical way to achieve real peace of mind and to lead a happy,useful life.vipassana means “to see things as they really are”.it is a logical process of mental purification through self-observation.</p>
             <div class="flip1">
                 <h2>Benifits:</h2>
@@ -61,7 +61,7 @@
         </div>
         <div class="card" id="card-2">
             <h2 class="cardH">Mantra Meditation</h2>
-            <img src="Meditation/images/mantra1.jpg" alt="" srcset="" class="c2">
+            <img src="/images/mantra1.jpg" alt="" srcset="" class="c2">
             <p class="Text c2">Mantra is a Sanskrit term, with “man” meaning “mind” and “tra” meaning “release.” Think of a mantra — a word or phrase you repeat during meditation — as a tool to help release your mind. It can make a lot of difference, especially if you have trouble concentrating or getting in the right frame of mind.</p>
             <div class="flip2">
                 <h2>Benifits:</h2>
