--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -101,15 +101,15 @@
         <div class="card" id="card-4">
             <h2 class="cardH">Breathing Exercise</h2>
             <img src="Meditation/images/Breathing.jpg" class="c4">
-            <p class="Text c4"></p>
+            <p class="Text c4">Take a moment out to relax and reflect to your emotions and build mindful reflection into your body. Want to get calm ? Want to focus and Concentrate more? Want to get relief from stress? Try out Deep Breathing Exercise!</p>
             <div class="flip4">
                 <h2>Benifits:</h2>
                 <ul>
-                    <li>Relieves stress</li>
-                    <li>Reduces anxiety</li>
-                    <li>Improves mental wellness</li>
-                    <li>Promotes brain plasticity</li>
-                    <li>Helps treat addiction</li>
+                    <li>Deep breathing is natural painkiller and increases the secretion of feel good hormones.</li>
+                    <li>Removes toxins and promote better blood flow</li>
+                    <li>Super hack to treat anxiety, stress and nervousness.</li>
+                    <li>Increased oxygen levels can increase energy levels</li>
+                    <li>Reduces inflammation and makes imune system stronger</li>
                 </ul>
             </div>
             <button class="btn" id="btn4"><a href="https://drishty06.github.io/Healer/breathing%20exercise/breath.html"> Explore more </a></button>
