changed image link

--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -98,7 +98,7 @@
         </div>
         <div class="card" id="card-4">
             <h2 class="cardH">Breathing Exercise</h2>
-            <img src="Meditation/images/Breathing.jpg" class="c4">
+            <img src="../images/Breathing.jpg" class="c4">
             <p class="Text c4">Take a moment out to relax and reflect to your emotions and build mindful reflection into your body. Want to get calm ? Want to focus and Concentrate more? Want to get relief from stress? Try out Deep Breathing Exercise!</p>
             <div class="flip4">
                 <h2>Benefits:</h2>
