--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <img src="Vectors/Moodify/6336-removebg-preview.png" alt="">
             <div class="moodifyText">
                 <h1 >Moodify
-                    <a href="#" method="post" class="explore"><button class="btn">Explore Me</button></a>
+                    <a href="Moodify/Moodify.html" method="post" class="explore"><button class="btn">Explore Me</button></a>
                 </h1>
                 <div class="moodifyQuote">
                     <img src="images/quots-removebg-preview.png" alt="">
