--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -57,9 +57,7 @@
             <h2 class="cardH">Mantra Meditation</h2>
             <img src="../images/mantra1.jpg" alt="" srcset="" class="c2">
             <p class="Text c2">Mantra is a Sanskrit term, with “man” meaning “mind” and “tra” meaning “release.” Think
-                of a mantra — a word or phrase you repeat during meditation — as a tool to help release your mind. It
-                can make a lot of difference, especially if you have trouble concentrating or getting in the right frame
-                of mind.</p>
+                of a mantra — a word or phrase you repeat during meditation — as a tool to help release your mind.</p>
             <div class="flip2">
                 <h2>Benefits:</h2>
                 <ul>
