completed cardio in workout

--- a/workout/workout.html
+++ b/workout/workout.html
@@ -34,7 +34,7 @@
   <body>
     <div class="navigation">
         <ul>
-            <li><span class="healer">Healer </span></li>
+            <li><span class="healer"><a href="/index.html">Healer</a> </span></li>
             <li> -> <a href="">Workout </a></li>
         </ul>
     </div>
@@ -42,16 +42,18 @@
     <div class="cards">
         <div class="card" id="card-1">
             <h2 class="cardH">Cardio</h2>
-            <img src="Healer/Meditation/images/Vipassana1.png" class="c1">
-            <p class="Text c1">The technique of vipassana is simple, practical way to achieve real peace of mind and to lead a happy,useful life.vipassana means “to see things as they really are”.it is a logical process of mental purification through self-observation.</p>
+            <img src="images/Vectors/cardio/Project_2-11-removebg-preview.png" class="c1">
+            <p class="Text c1">Cardio exercises are endurance activities that use your large muscle groups in rhythmic motion over a sustained period of time. Cardio workouts get your heart pumping and you’ll breathe harder than normal.</p>
             <div class="flip1">
                 <h2>Benefits:</h2>
                 <ul>
-                    <li>Relieves stress</li>
-                    <li>Reduces anxiety</li>
-                    <li>Improves mental wellness</li>
-                    <li>Promotes brain plasticity</li>
-                    <li>Helps treat addiction</li>
+                    <li>Improved heart health</li>
+                    <li>Enhanced brain health</li>
+                    <li>Increased metabolic rate</li>
+                    <li>Weight regulation</li>
+                    <li>Improved mood and energy</li>
+                    <li>Stronger immune system</li>
+                    <li>Management of arthritis</li>
                 </ul>
             </div>
             <button class="btn" id="btn1">Explore more</button>
@@ -60,18 +62,19 @@
         </div>
         <div class="card" id="card-2">
             <h2 class="cardH">Strength</h2>
-            <img src="images/mantra1.jpg" alt="" srcset="" class="c2">
-            <p class="Text c2">Mantra is a Sanskrit term, with “man” meaning “mind” and “tra” meaning “release.” Think of a mantra — a word or phrase you repeat during meditation — as a tool to help release your mind. It can make a lot of difference, especially if you have trouble concentrating or getting in the right frame of mind.</p>
+            <img src="images/Vectors/Strength/2761_REpWIEpVTCAxNjMwLTM2-removebg-preview.png" alt="" srcset="" class="c2">
+            <p class="Text c2">Strength training builds up muscles with repetitive motion using resistance from free weights, weight machines, own body weight. strength training done at a faster speed to increase power and reaction times.</p>
             <div class="flip2">
                 <h2>Benefits:</h2>
                 <ul>
-                    <li>Increased self-awareness</li>
-                    <li>Reduced stress</li>
-                    <li>A greater sense of calm</li>
-                    <li>Increased self-compassion</li>
-                    <li>A more positive outlook</li>
-                    <li>Increased concentration</li>
-                    <li>Improved visuospatial and verbal memory</li>
+                    <li>Makes you stronger</li>
+                    <li>Makes your bones stronger</li>
+                    <li>Boosts your self-esteem</li>
+                    <li>Helps manage your blood sugar levels</li>
+                    <li>Improves heart health</li>
+                    <li>Lowers your risk of injury</li>
+                    <li>Burns calories efficiently</li>
+                    <li>Decreases abdominal fat</li>
                 </ul>
             </div>
             <button class="btn" id="btn2">Explore more</button>
@@ -79,18 +82,17 @@
         </div>
         <div class="card" id="card-3">
             <h2 class="cardH">Balance and Flexiblity</h2>
-            <img src="Meditation/images/Pranayam1.png" class="c3">
-            <p class="Text c3">Pranayama is the practice of breath regulation. It’s a main component of yoga, an exercise for physical and mental wellness. In Sanskrit, “prana” means life energy and “yama” means control. The goal of pranayama is to connect your body and mind.</p>
+            <img src="images/Vectors/balance/balance.png" class="c3">
+            <p class="Text c3">Flexibility challenges the ability of your body’s joints to move freely through a full range of motion. Balance maintains stability, whether you’re stationary or moving around.</p>
             <div class="flip3">
                 <h2>Benefits:</h2>
                 <ul>
-                    <li>Decreases stress</li>
-                    <li>Improves sleep quality</li>
-                    <li>Increases mindfulness</li>
-                    <li>Reduces high blood pressure</li>
-                    <li>Improves lung function</li>
-                    <li>Enhances cognitive performance</li>
-                    <li>Reduces cigarette cravings</li>
+                    <li>Keep your muscles and joints supple and less prone to injury.</li>
+                    <li>Prevent back pain.</li>
+                    <li>Improve your athletic performance.</li>
+                    <li>Prevent balance problems.</li>
+                    <li>Increase circulation.</li>
+                    <li>Relieve tension and stress.</li>
                 </ul>
             </div>
             <button class="btn" id="btn3">Explore more</button>
@@ -100,6 +102,6 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="meditation.js"></script>
+    <script src="workout.js"></script>
   </body>
 </html>
