--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -25,6 +25,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;613&family=Poppins:wght@500&family=Roboto+Mono:wght@200&display=swap"
         rel="stylesheet" />
+
+    <link rel="icon" href="/images/favicon.ico">
 </head>
 
 <body>
@@ -57,9 +59,7 @@
             <h2 class="cardH">Mantra Meditation</h2>
             <img src="../images/mantra1.jpg" alt="" srcset="" class="c2">
             <p class="Text c2">Mantra is a Sanskrit term, with “man” meaning “mind” and “tra” meaning “release.” Think
-                of a mantra — a word or phrase you repeat during meditation — as a tool to help release your mind. It
-                can make a lot of difference, especially if you have trouble concentrating or getting in the right frame
-                of mind.</p>
+                of a mantra — a word or phrase you repeat during meditation — as a tool to help release your mind.</p>
             <div class="flip2">
                 <h2>Benefits:</h2>
                 <ul>
