--- a/workout/workout.html
+++ b/workout/workout.html
@@ -56,7 +56,7 @@
                     <li>Management of arthritis</li>
                 </ul>
             </div>
-            <button class="btn" id="btn1">Explore more</button>
+            <button class="btn" id="btn1"><a href="cardio/cardio.html">Explore more</a></button>
             <div class="block" id="b1"></div>
             
         </div>
