--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="workOutBox box">
             <div class="workOutText">
                 <h1 >Work Out
-                    <a href="#" method="post" class="explore"><button class="btn">Explore Me</button></a>
+                    <a href="workout/workout.html" method="post" class="explore"><button class="btn">Explore Me</button></a>
                 </h1>
                 <div class="workOutQuote">
                     <img src="images/quots-removebg-preview.png" alt="">
