--- a/workout/cardio/cardio.html
+++ b/workout/cardio/cardio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardio</title>
     <link rel="stylesheet" href="cardio.css">
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="../images/favicon.ico">
 
     <!-- Bebas Neue Font css : font-family: 'Bebas Neue', cursive; -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +27,7 @@
     <div class="navigation">
         <ul>
             <li><span class="healer"><a href="/index.html">Healer</a> </span></li>
-            <li> -> <a href="">Workout </a></li>
+            <li> -> <a href="../workout.html">Workout </a></li>
             <li> -> Cardio</li>
         </ul>
     </div>
