--- a/workout/workout.html
+++ b/workout/workout.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;613&family=Poppins:wght@500&family=Roboto+Mono:wght@200&display=swap"
       rel="stylesheet"/>
 
-      <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
   </head>
   <body>
     <div class="navigation">
