linked various pages and corrected layout

--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meditation</title>
     <link rel="stylesheet" href="meditation.css">
+    <link rel="icon" href="../images/favicon.ico">
     <!-- cookie font css : font-family: 'Cookie', cursive;-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,28 +21,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     
-<!-- font-family: 'Poppins', sans-serif; -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-
-
-<<<<<<< Updated upstream
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;613&family=Poppins:wght@500&family=Roboto+Mono:wght@200&display=swap"
-        rel="stylesheet" />
-
-    <link rel="icon" href="../images/favicon.ico">
-=======
->>>>>>> Stashed changes
+    <!-- font-family: 'Poppins', sans-serif; -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="navigation">
         <ul>
-            <li><span class="healer">Healer </span></li>
-            <li> -> <a href="">Meditation </a></li>
+            <li><a href="../../index.html"><span class="healer">Healer </span></a></li>
+            <li> -> Meditation</li>
         </ul>
     </div>
     <div class="cards">
@@ -86,9 +76,8 @@
         <div class="card" id="card-3">
             <h2 class="cardH">Pranayam</h2>
             <img src="../images/Pranayam1.png" class="c3">
-            <p class="Text c3">Pranayama is the practice of breath regulation. It’s a main component of yoga, an
-                exercise for physical and mental wellness. In Sanskrit, “prana” means life energy and “yama” means
-                control. The goal of pranayama is to connect your body and mind.</p>
+            <p class="Text c3">Pranayama is the practice of breath regulation. It’s a main component of yoga In Sanskrit, “prana” means life energy and “yama” means
+                control. It's goal is to connect your body and mind.</p>
             <div class="flip3">
                 <h2>Benefits:</h2>
                 <ul>
