--- a/Moodify/Moodify.html
+++ b/Moodify/Moodify.html
@@ -1,73 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moodify</title>
-    <link rel="stylesheet" href="Moodify.css">
-    <!-- cookie font css : font-family: 'Cookie', cursive;-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cookie&family=Kaushan+Script&display=swap"
-      rel="stylesheet"/>
-    <!-- Anton css : font-family: 'Anton', sans-serif;-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
-      rel="stylesheet"/>
-    <!-- Bebas Neue Font css : font-family: 'Bebas Neue', cursive; -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;613&family=Poppins:wght@500&family=Roboto+Mono:wght@200&display=swap"
-      rel="stylesheet"/>
-      <link rel="icon" href="../images/favicon.ico">
-  </head>
-  <body>
-    
-    <div class="navigation">
-      <ul>
-          <li><a href="../../index.html"> <span class="healer">Healer </span></a></li>
-          <li> -> Moodify </li>
-      </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Moodify</title>
+  <link rel="stylesheet" href="Moodify.css">
+  <!-- cookie font css : font-family: 'Cookie', cursive;-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Kaushan+Script&display=swap" rel="stylesheet" />
+  <!-- Anton css : font-family: 'Anton', sans-serif;-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+  <!-- Bebas Neue Font css : font-family: 'Bebas Neue', cursive; -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;613&family=Poppins:wght@500&family=Roboto+Mono:wght@200&display=swap"
+    rel="stylesheet" />
+  <link rel="icon" href="../images/favicon.ico">
+</head>
+
+<body>
+
+  <div class="navigation">
+    <ul>
+      <li><a href="../index.html"> <span class="healer">Healer </span></a></li>
+      <li> -> Moodify </li>
+    </ul>
   </div>
 
-    <div class="cards">
-        <div class="card" id="card-1">
-            <h2 class="cardH">Negative Visualization</h2>
-            <img src="images/visualization.jpg" class="c1">
-            <p class="Text c1">Want to get prepared to handle every bad situation calmly?
-                Thinking about negative scenarios does not make you pessimistic, but rather optimistic !
-                It develops the feeling of gratitude to stay happy with what we have !</p>
-            <button class="btn" id="btn1">Explore more</button>
-            <div class="block" id="b1"></div>
-            
-        </div>
-        <div class="card" id="card-2">
-            <h2 class="cardH">Mandala</h2>
-            <img src="images/Mandala.jpg" alt="" srcset="" class="c2">
-            <p class="Text c2">Mandala coloring has a healing power effect which helps in reducing negativity. It reduces stress.
-              Mandalas boost the immune system, reduce stress, lower blood pressure, promote sleep and ease depression</p>
-            <button class="btn" id="btn2">Explore more</button>
-            <div class="block" id="b2"></div>
-        </div>
-        <div class="card" id="card-3">
-            <h2 class="cardH">Guess The Color</h2>
-            <img src="images/guess the color.png" class="c3">
-            <p class="Text c3">Colours has an ability to change your mood that's why play this game in this you have to guess the colour based on the RGB value of the colour.</p>
-            <button class="btn" id="btn3">Explore more</button>
-            <div class="block" id="b3"></div>
-        </div>
+  <div class="cards">
+    <div class="card" id="card-1">
+      <h2 class="cardH">Negative Visualization</h2>
+      <img src="images/visualization.jpg" class="c1">
+      <p class="Text c1">Want to get prepared to handle every bad situation calmly?
+        Thinking about negative scenarios does not make you pessimistic, but rather optimistic !
+        It develops the feeling of gratitude to stay happy with what we have !</p>
+      <button class="btn" id="btn1">Explore more</button>
+      <div class="block" id="b1"></div>
     </div>
+    <div class="card" id="card-2">
+      <h2 class="cardH">Mandala</h2>
+      <img src="images/Mandala.jpg" alt="" srcset="" class="c2">
+      <p class="Text c2">Mandala coloring has a healing power effect which helps in reducing negativity. It reduces
+        stress.
+        Mandalas boost the immune system, reduce stress, lower blood pressure, promote sleep and ease depression</p>
+      <button class="btn" id="btn2"><a href="./mandala/mandala.html">Explore more</a></button>
+      <div class="block" id="b2"></div>
+    </div>
+    <div class="card" id="card-3">
+      <h2 class="cardH">Guess The Color</h2>
+      <img src="images/guess the color.png" class="c3">
+      <p class="Text c3">Colours has an ability to change your mood that's why play this game in this you have to guess
+        the colour based on the RGB value of the colour.</p>
+      <button class="btn" id="btn3"><a href="./guess the color/guessColor.html"> Explore more</a></button>
+      <div class="block" id="b3"></div>
+    </div>
+  </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="Moodfiy.js"></script>
-  </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="Moodfiy.js"></script>
+</body>
+
 </html>
