--- a/workout/workout.html
+++ b/workout/workout.html
@@ -77,7 +77,7 @@
                     <li>Decreases abdominal fat</li>
                 </ul>
             </div>
-            <button class="btn" id="btn2">Explore more</button>
+            <button class="btn" id="btn2"><a href="./strength/strength.html">Explore more</a></button>
             <div class="block" id="b2"></div>
         </div>
         <div class="card" id="card-3">
@@ -95,10 +95,9 @@
                     <li>Relieve tension and stress.</li>
                 </ul>
             </div>
-            <button class="btn" id="btn3">Explore more</button>
+            <button class="btn" id="btn3"><a href="./balancing/balancing.html">Explore more</a></button>
             <div class="block" id="b3"></div>
         </div>
-        
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
