added all section of meditation , images

--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -40,7 +40,7 @@
 <body>
     <div class="navigation">
         <ul>
-            <li><span class="healer">Healer </span></li>
+            <li><span class="healer"><a href="/index.html">Healer</a> </span></li>
             <li> -> <a href="">Meditation </a></li>
         </ul>
     </div>
