--- a/Moodify/Moodify.html
+++ b/Moodify/Moodify.html
@@ -47,7 +47,7 @@
       <p class="Text c1">Want to get prepared to handle every bad situation calmly?
         Thinking about negative scenarios does not make you pessimistic, but rather optimistic !
         It develops the feeling of gratitude to stay happy with what we have !</p>
-      <button class="btn" id="btn1">Explore more</button>
+      <button class="btn" id="btn1"><a href="../Visualization\Visualization.html"> Explore more</a></button>
       <div class="block" id="b1"></div>
     </div>
     
