--- a/breathing exercise/breath.html
+++ b/breathing exercise/breath.html
@@ -27,8 +27,8 @@
 <body>
     <div class="navigation">
         <ul>
-            <li><span class="healer">Healer </span></li>
-            <li> -> <a href="">Meditation </a></li>
+            <li><a href="../index.html"><span class="healer">Healer </span></a></li>
+            <li> -> <a href="../Meditation/landing page/meditation.html">Meditation </a></li>
             <li> -> Breathing Exercise</li>
         </ul>
     </div>
