--- a/workout/workout.html
+++ b/workout/workout.html
@@ -34,7 +34,7 @@
   <body>
     <div class="navigation">
         <ul>
-            <li><span class="healer"><a href="/index.html">Healer</a> </span></li>
+            <li><span class="healer"><a href="../index.html">Healer</a> </span></li>
             <li> -> <a href="">Workout </a></li>
         </ul>
     </div>
