--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -30,7 +30,7 @@
 <body>
     <div class="navigation">
         <ul>
-            <li><span class="healer"><a href="/index.html">Healer</a> </span></li>
+            <li><span class="healer"><a href="../index.html">Healer</a> </span></li>
             <li> -> <a href="">Meditation </a></li>
         </ul>
     </div>
@@ -49,7 +49,7 @@
                     <li>Helps treat addiction</li>
                 </ul>
             </div>
-            <button class="btn" id="btn1">Explore more</button>
+            <button class="btn" id="btn1"><a href="../Vipassana/vipassana.html"> Explore more </a></button>
             <div class="block" id="b1"></div>
 
         </div>
@@ -70,7 +70,8 @@
                     <li>Improved visuospatial and verbal memory</li>
                 </ul>
             </div>
-            <button class="btn" id="btn2">Explore more</button>
+            <button class="btn" id="btn2"><a href="../mantra/mantra.html">
+                Explore more </a></button>
             <div class="block" id="b2"></div>
         </div>
         <div class="card" id="card-3">
@@ -90,7 +91,7 @@
                     <li>Reduces cigarette cravings</li>
                 </ul>
             </div>
-            <button class="btn" id="btn3">Explore more</button>
+            <button class="btn" id="btn3"><a href="../pranayam/pranayam.html">Explore more </a></button>
             <div class="block" id="b3"></div>
         </div>
         <div class="card" id="card-4">
