--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -55,7 +55,7 @@
         </div>
         <div class="card" id="card-2">
             <h2 class="cardH">Mantra Meditation</h2>
-            <img src="../images/mantra1.jpg" alt="" srcset="" class="c2">
+            <img src="/images/mantra1.jpg" alt="" srcset="" class="c2">
             <p class="Text c2">Mantra is a Sanskrit term, with “man” meaning “mind” and “tra” meaning “release.” Think
                 of a mantra — a word or phrase you repeat during meditation — as a tool to help release your mind.</p>
             <div class="flip2">
@@ -76,7 +76,7 @@
         </div>
         <div class="card" id="card-3">
             <h2 class="cardH">Pranayam</h2>
-            <img src="../images/Pranayam1.png" class="c3">
+            <img src="/images/Pranayam1.png" class="c3">
             <p class="Text c3">Pranayama is the practice of breath regulation. It’s a main component of yoga In Sanskrit, “prana” means life energy and “yama” means
                 control. It's goal is to connect your body and mind.</p>
             <div class="flip3">
@@ -96,7 +96,7 @@
         </div>
         <div class="card" id="card-4">
             <h2 class="cardH">Breathing Exercise</h2>
-            <img src="../images/Breathing.jpg" class="c4">
+            <img src="/images/Breathing.jpg" class="c4">
             <p class="Text c4">Take a moment out to relax and reflect to your emotions and build mindful reflection into your body. Want to get calm ? Want to focus and Concentrate more? Want to get relief from stress? Try out Deep Breathing Exercise!</p>
             <div class="flip4">
                 <h2>Benefits:</h2>
