--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -37,7 +37,7 @@
     <div class="cards">
         <div class="card" id="card-1">
             <h2 class="cardH">Vipassana Meditation</h2>
-            <img src="../images/Vipassana1.png" class="c1">
+            <img src="images/Vipassana1.png" class="c1">
             <p class="Text c1">The technique of vipassana is simple, practical way to achieve real peace of mind to lead a happy,useful life.vipassana means “to see things as they really are”.it is a logical process of mental purification through self-observation.</p>
             <div class="flip1">
                 <h2>Benefits:</h2>
