--- a/Visualization/Visualization.html
+++ b/Visualization/Visualization.html
@@ -39,7 +39,7 @@
 
   <div class="navigation">
     <ul>
-      <li><a href="../../index.html"><span class="healer">Healer </span></a></li>
+      <li><a href="../index.html"><span class="healer">Healer </span></a></li>
       <li> -> <a href="../Meditation/landing page/meditation.html">Meditation</a> </li>
       <li> -> Visualization</li>
     </ul>
