--- a/Meditation/landing page/meditation.html
+++ b/Meditation/landing page/meditation.html
@@ -30,7 +30,7 @@
 <body>
     <div class="navigation">
         <ul>
-            <li><span class="healer"><a href="../index.html">Healer</a> </span></li>
+            <li><span class="healer"><a href="/index.html">Healer</a> </span></li>
             <li> -> <a href="">Meditation </a></li>
         </ul>
     </div>
