--- a/Meditation/Vipassana/vipassana.html
+++ b/Meditation/Vipassana/vipassana.html
@@ -26,8 +26,8 @@
 <body>
     <div class="navigation">
         <ul>
-            <li><span class="healer"><a href="/index.html">Healer</a> </span></li>
-            <li> -> <a href="../landing page/meditation.html">Meditation</a></li>
+            <li><span class="healer"><a href="../../index.html">Healer</a> </span></li>
+            <li> -> <a href="../meditation.html">Meditation</a></li>
             <li> -> Vipassana Meditation</li>
         </ul>
     </div>
