--- a/Visualization/Visualization.html
+++ b/Visualization/Visualization.html
@@ -40,7 +40,7 @@
   <div class="navigation">
     <ul>
       <li><a href="../index.html"><span class="healer">Healer </span></a></li>
-      <li> -> <a href="../Meditation/landing page/meditation.html">Meditation</a> </li>
+      <li> -> <a href="../Moodify/Moodify.html">Moodify</a> </li>
       <li> -> Visualization</li>
     </ul>
   </div>
