--- a/Meditation/meditation.html
+++ b/Meditation/meditation.html
@@ -37,7 +37,7 @@
     <div class="cards">
         <div class="card" id="card-1">
             <h2 class="cardH">Vipassana Meditation</h2>
-            <img src="../images/Vipassana1.png" class="c1">
+            <img src="./images/Vipassana1.png" class="c1">
             <p class="Text c1">The technique of vipassana is simple, practical way to achieve real peace of mind to lead a happy,useful life.vipassana means “to see things as they really are”.it is a logical process of mental purification through self-observation.</p>
             <div class="flip1">
                 <h2>Benefits:</h2>
@@ -49,13 +49,13 @@
                     <li>Helps treat addiction</li>
                 </ul>
             </div>
-            <button class="btn" id="btn1"><a href="../Vipassana/vipassana.html"> Explore more </a></button>
+            <button class="btn" id="btn1"><a href="./Vipassana/vipassana.html"> Explore more </a></button>
             <div class="block" id="b1"></div>
 
         </div>
         <div class="card" id="card-2">
             <h2 class="cardH">Mantra Meditation</h2>
-            <img src="../images/mantra1.jpg" alt="" srcset="" class="c2">
+            <img src="./images/mantra1.jpg" alt="" srcset="" class="c2">
             <p class="Text c2">Mantra is a Sanskrit term, with “man” meaning “mind” and “tra” meaning “release.” Think
                 of a mantra — a word or phrase you repeat during meditation — as a tool to help release your mind.</p>
             <div class="flip2">
@@ -70,13 +70,13 @@
                     <li>Improved visuospatial and verbal memory</li>
                 </ul>
             </div>
-            <button class="btn" id="btn2"><a href="../mantra/mantra.html">
+            <button class="btn" id="btn2"><a href="./mantra/mantra.html">
                 Explore more </a></button>
             <div class="block" id="b2"></div>
         </div>
         <div class="card" id="card-3">
             <h2 class="cardH">Pranayam</h2>
-            <img src="../images/Pranayam1.png" class="c3">
+            <img src="./images/Pranayam1.png" class="c3">
             <p class="Text c3">Pranayama is the practice of breath regulation. It’s a main component of yoga In Sanskrit, “prana” means life energy and “yama” means
                 control. It's goal is to connect your body and mind.</p>
             <div class="flip3">
@@ -91,12 +91,12 @@
                     <li>Reduces cigarette cravings</li>
                 </ul>
             </div>
-            <button class="btn" id="btn3"><a href="../pranayam/pranayam.html">Explore more </a></button>
+            <button class="btn" id="btn3"><a href="./pranayam/pranayam.html">Explore more </a></button>
             <div class="block" id="b3"></div>
         </div>
         <div class="card" id="card-4">
             <h2 class="cardH">Breathing Exercise</h2>
-            <img src="../images/Breathing.jpg" class="c4">
+            <img src="./images/Breathing.jpg" class="c4">
             <p class="Text c4">Take a moment out to relax and reflect to your emotions and build mindful reflection into your body. Want to get calm ? Want to focus and Concentrate more? Want to get relief from stress? Try out Deep Breathing Exercise!</p>
             <div class="flip4">
                 <h2>Benefits:</h2>
