--- a/breathing exercise/breath.html
+++ b/breathing exercise/breath.html
@@ -28,7 +28,7 @@
     <div class="navigation">
         <ul>
             <li><a href="../index.html"><span class="healer">Healer </span></a></li>
-            <li> -> <a href="../Meditation/landing page/meditation.html">Meditation </a></li>
+            <li> -> <a href="../Meditation/meditation.html">Meditation </a></li>
             <li> -> Breathing Exercise</li>
         </ul>
     </div>
