--- a/Moodify/guess the color/guessColor.html
+++ b/Moodify/guess the color/guessColor.html
@@ -7,6 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess The Color</title>
     <link rel="stylesheet" href="guessColor.css">
+    <!-- cookie font css : font-family: 'Cookie', cursive;-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Kaushan+Script&display=swap" rel="stylesheet" />
+  
+  <!-- Anton css : font-family: 'Anton', sans-serif;-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+  
+  <!-- Bebas Neue Font css : font-family: 'Bebas Neue', cursive; -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;613&family=Poppins:wght@500&family=Roboto+Mono:wght@200&display=swap"
+    rel="stylesheet" />
     <link rel="icon" href="../images/favicon.ico">
 </head>
 
