--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 </div>
             </div>
             <div class="feedback">
-                <h3>Are you stepping away from healer with a smile on your face😊? Do let us know you experience.</h3>
+                <h3>Are you stepping away from healer with a smile on your face😊? Do let us know your experience.</h3>
                 <a href="mailto:healer.your.companion@gmail.com?subject=Regarding Experience of Healer." method="post"><button class="btn">Contact Us</button></a>
             </div>
             <p class="madeWith">Made With ❤ by Team Phod Denge</p>
